--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,10 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-key": "off",
+        "react/prop-types": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     },
     "settings": {
         "react": {
