--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,5 +34,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
-          publish-branch: gh-pages
-          publish-dir: ./build
+          publish_branch: gh-pages
+          publish_dir: build
