Add setup node to gh action

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+
       - name: Install Packages
         run: npm install
 
