--- a/.github/workflows/pr-tags.yml
+++ b/.github/workflows/pr-tags.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Check for data changes
         id: data-check
         run: |
-          CHANGED_FILES=$(git diff origin/main HEAD --name-only)
+          CHANGED_FILES=$(git diff origin/main HEAD)
 
           # Check if specific files are modified
           if echo "$CHANGED_FILES" | grep -qE 'public/data/'; 
