--- a/.github/workflows/pr-tags.yml
+++ b/.github/workflows/pr-tags.yml
@@ -19,7 +19,7 @@ jobs:
           CHANGED_FILES=$(git diff --name-only -- public/data/)
 
           # Check if specific files are modified
-          if echo "$CHANGED_FILES" | grep -qE 'public/data/'; 
+          if echo "$CHANGED_FILES" | grep -qE 'public/data/'; then 
             echo "Folder changed: $CHANGED_FILES"
             echo "::set-output name=tag_triggered::true"
           else
