--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -11,10 +11,10 @@ name: ESLint
 
 on:
   push:
-    branches: [ "main", "dev" ]
+    branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main", "dev" ]
+    branches: [ "main" ]
 
 jobs:
   eslint:
