--- a/package.json
+++ b/package.json
@@ -3,35 +3,25 @@
   "version": "0.1.0",
   "homepage": "https://lp2851.github.io",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/eslint": "^8.56.2",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "bootstrap": "^5.2.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.ts src/**/*.tsx"
+    "dev": "vite",
+    "start": "vite preview",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,9 +42,19 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.33.2",
-    "gh-pages": "^4.0.0"
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
+    "globals": "^15.15.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0"
   },
   "description": "",
   "main": "index.js",
