--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -5,50 +5,49 @@
 # ESLint is a tool for identifying and reporting on patterns
 # found in ECMAScript/JavaScript code.
 # More details at https://github.com/eslint/eslint
-# # and https://eslint.org
+# and https://eslint.org
 
-# name: ESLint
 
-# on:
-#   push:
-#     branches: [ "main", "dev" ]
-#   pull_request:
-#     # The branches below must be a subset of the branches above
-#     branches: [ "main", "dev" ]
+name: ESLint
 
-# jobs:
-#   eslint:
-#     name: Run eslint scanning
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-#       security-events: write
-#       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ "main" ]
+#  schedule:
+#    - cron: '26 12 * * 2'
 
-#       - name: Setup Node
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: '20'
+jobs:
+  eslint:
+    name: Run eslint scanning
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#       - name: Install Packages
-#         run: npm install
+      - name: Install ESLint
+        run: |
+          npm install eslint@9.21.0
+          npm install @microsoft/eslint-formatter-sarif@3.1.0
 
-#       - name: Install ESLint
-#         run: npm install @microsoft/eslint-formatter-sarif@2.1.7
+      - name: Run ESLint
+        env:
+          SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
+        run: npx eslint .
+          --config eslint.config.js
+          --ext .js,.jsx,.ts,.tsx
+          --format @microsoft/eslint-formatter-sarif
+          --output-file eslint-results.sarif
+        continue-on-error: true
 
-#       - name: Run ESLint
-#         run: npx eslint .
-#           --config eslint.config.js
-#           --ext .js,.jsx,.ts,.tsx
-#           --format @microsoft/eslint-formatter-sarif
-#           --output-file eslint-results.sarif
-#         continue-on-error: true
-
-#       - name: Upload analysis results to GitHub
-#         uses: github/codeql-action/upload-sarif@v3
-#         with:
-#           sarif_file: eslint-results.sarif
-#           wait-for-processing: true
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: eslint-results.sarif
+          wait-for-processing: true
