--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -18,6 +18,7 @@
     "technologies": [
       "typescript",
       "react",
+      "vite",
       "html",
       "css",
       "github pages",
@@ -25,7 +26,7 @@
       "eslint"
     ],
     "keywords": [
-      "web development",
+      "frontend",
       "ci/cd"
     ]
   }
