--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "vite preview",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
+    "prettier": "npx prettier --write .",
+    "lint:fix": "npm run prettier && eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
@@ -44,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
+    "prettier": "3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
