--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,10 +1,10 @@
 data-change:
   - changed-files:
-    - any-glob-to-any-file: public/data/**
+      - any-glob-to-any-file: public/data/**
 
 release:
-  - base-branch: 'main'
+  - base-branch: "main"
 
 documentation:
   - changed-files:
-      - any-glob-to-any-file: '**/*.md'
+      - any-glob-to-any-file: "**/*.md"
