--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -25,9 +25,6 @@
       "github actions",
       "eslint"
     ],
-    "keywords": [
-      "frontend",
-      "ci/cd"
-    ]
+    "keywords": ["frontend", "ci/cd"]
   }
 ]
