--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -23,7 +23,8 @@
       "css",
       "github pages",
       "github actions",
-      "eslint"
+      "eslint",
+      "prettier"
     ],
     "keywords": ["frontend", "ci/cd"]
   }
