data: rename gh io project fixing spacing issues on phone

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "lp2851.github.io",
+    "name": "LP2851 GitHub.io",
     "auto": "https://raw.githubusercontent.com/LP2851/LP2851.github.io/refs/heads/main/.lp2851/project.json"
   },
   {
