--- a/.lp2851/project.json
+++ b/.lp2851/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "lp2851.github.io",
+  "name": "LP2851 GitHub.io",
   "description": "My personal website, built using React and deployed via GitHub Pages.",
   "startDate": "Jan 2024",
   "endDate": null,
