fix: dates from projects parsing error on Safari

--- a/.lp2851/project.json
+++ b/.lp2851/project.json
@@ -1,7 +1,7 @@
 {
   "name": "LP2851 GitHub.io",
   "description": "My personal website, built using React and deployed via GitHub Pages.",
-  "startDate": "Jan 2024",
+  "startDate": "2024-01-01",
   "endDate": null,
   "active": true,
   "links": [
